--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
-body{
+#homepage{
+    background-color: lightcyan;
+    font-family: 'Rubik', sans-serif;
+}
+
+#addpage{
     background-color: lightcyan;
     font-family: 'Rubik', sans-serif;
 }
@@ -84,6 +89,7 @@ body{
 }
 
 
+
 .locations button{
     border: none;
     background: none;
@@ -97,6 +103,51 @@ body{
     
 }
 
+.home{
+    text-align: left;
+    margin-left: 150px;
+    font-size: 30px;
+    border-radius: 20px;
+    background-color: lightgrey;
+    margin-right: 150px;
+    margin-left: 150px;
+    padding: 5px 50px 5px 50px;
+
+}
+
+.home h2, i{
+    display: inline;
+}
+
+.home i{
+    position: relative;
+    float: right;
+    bottom: 55px;
+    padding-right: 50px;
+    font-size: 150px;
+}
+
+.week_forcast{
+
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 5px;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+.week_forcast div{
+    text-align: center;
+    padding: 15px;
+    
+}
+
+.week_forcast div:nth-child(n+2){
+    border-left: 5px solid;
+    border-color: black;
+
+}
 
 
 footer{
